--- a/styles/components/_page.scss
+++ b/styles/components/_page.scss
@@ -1,28 +1,31 @@
 .page {
-  position:relative;
-  display:flex;
-  min-height:calc(100vh - 94px);
+  display: flex;
+  position: relative;
+  //min-height: calc(100vh - 94px);
+}
 
-  .sidebar { 
-    flex:0 0 25%; 
-    max-width:25%;
+.page__content {
+  overflow-x: hidden;
+  width: 100%;
+  padding: 0.5em;
+
+  @media (min-width: map-get($screens, medium)) {
+    flex: 3;
+
+    padding: 1.5em;
+    background: map-get($colors, white);
   }
+}
 
-  &__content { 
-    flex:0 0 75%; 
-    max-width:75%;
-    padding:1.5em;
-    background:map-get($colors, white);
-  }
+.page__edit {
+  position: absolute;
+  top: 1.5em;
+  right: 1.5em;
+  font-size: getFontSize(-1);
+  text-transform: uppercase;
+  color: map-get($colors, lynch);
 
-  &__edit {
-    position:absolute;
-    top:1.5em; 
-    right:1.5em;
-    font-size:getFontSize(-1);
-    text-transform:uppercase;
-    color:map-get($colors, lynch);
-
-    &:hover { color:map-get($colors, chatham); }
+  &:hover {
+    color: map-get($colors, chatham);
   }
 }
