--- a/styles/index.scss
+++ b/styles/index.scss
@@ -9,10 +9,19 @@
 
 @import "functions";
 @import "vars";
+@import "mixins";
 
 @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono);
 @import url(https://fonts.googleapis.com/css?family=Averia+Sans+Libre:300);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,600,700,400italic);
+
+* {
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+}
 
 body {
   font:300 getFontSize(0) 'Open Sans', 'Century Gothic', sans-serif;
