--- a/template.ejs
+++ b/template.ejs
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title><%= webpackConfig.template.title %></title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <% for (var file in webpackConfig.template.cssFiles) { %>
       <link href="<%= webpackConfig.template.cssFiles[file] %>" rel="stylesheet">
     <% } %>
