--- a/styles/_markdown.scss
+++ b/styles/_markdown.scss
@@ -1,32 +1,5 @@
 .page__content,
 .splash__content {
-  h1 { font-size: getFontSize(4); }
-  h2 { font-size: getFontSize(3); }
-  h3 { font-size: getFontSize(2); }
-  h4 { font-size: getFontSize(1); }
-  h5 { font-size: getFontSize(0); }
-  h6 { font-size: getFontSize(-1); }
-
-  h1, h2, h3, h4, h5, h6 {
-    font-weight:400;
-    margin:1.5em 0 0.5em;
-
-    &:first-child { margin-top:0; }
-    tt, code { font-size:inherit; }
-  }
-
-  p, blockquote, table, pre {
-    margin:1em 0;
-  }
-
-  ul, ol, dl {
-    margin:0.5em 0 1em;
-  }
-
-  li {
-    margin:0.5em 0;
-  }
-
   hr {
     border:none;
     background-color:map-get($colors, alto);
@@ -34,37 +7,9 @@
     margin:2em 0;
   }
 
-  ul, ol {
-    padding-left: 30px;
-
-    &:first-child { margin-top:0; }
-    &:last-child { margin-bottom:0; }
-  }
-
-  dl {
-    dt {
-      font-size: getFontSize(0);
-      font-weight: bold;
-      font-style: italic;
-      margin: 15px 0 5px;
-
-      &:first-child { padding: 0; }
-    }
-
-    dd {
-      margin: 0 0 15px;
-      padding: 0 15px;
-    }
-
-    dt, dd {
-      > :first-child { margin-top: 0; }
-      > :last-child { margin-bottom: 0; }
-    }
-  }
-
   blockquote {
-    border-left: 4px solid #dddddd;
-    padding:0.75em 1em;
+    /*border-left: 4px solid #dddddd;*/
+    /*padding:0.75em 1em;*/
     color:map-get($colors, dove-grey);
 
     > :first-child { margin-top: 0; }
@@ -83,7 +28,7 @@
 
       .tip-title {
         font-size:0.8em;
-        font-weight:600;
+        font-weight:700;
         margin-bottom:0.5em;
         text-transform:uppercase;
       }
@@ -131,30 +76,15 @@
     }
   }
 
-  img {
-    max-width: 100%;
-  }
-
-  b, strong {
-    font-weight:600;
-  }
-
   code, tt {
-    font-family:'Ubuntu Mono', monospace;
-    margin: 0 2px;
-    padding: 0 5px;
-    white-space: nowrap;
-    border: 1px solid #eaeaea;
-    background-color: #f8f8f8;
+    /*border: 1px solid #eaeaea;*/
+    /*background-color: #f8f8f8;*/
     border-radius: 3px;
   }
 
   pre {
-    background-color:map-get($colors, mine-shaft);
-    font-size: 13px;
-    line-height: 19px;
+    /*background-color:map-get($colors, mine-shaft);*/
     overflow: auto;
-    padding: 6px 10px;
     border-radius: 3px;
 
     code {
@@ -162,7 +92,7 @@
       padding: 0;
       white-space: pre;
       border: none;
-      color:map-get($colors, concrete);
+      /*color:map-get($colors, concrete);*/
       background: transparent;
 
       .code-details-summary-span {
@@ -172,7 +102,7 @@
     }
 
     code, tt {
-      background-color: transparent;
+      /*background-color: transparent;*/
       border: none;
     }
   }
