--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -1,16 +1,18 @@
 .footer {
-  max-width:  map-get($screens, large);
-  margin:     auto;
-  background: map-get($colors, alto);
+  //width: 100%;
+  //max-width: map-get($screens, large);
+  //margin: auto;
+  flex: 0 0 auto;
 }
 
 .footer__inner {
-  display:         flex;
-  flex-wrap:       wrap;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
-  align-content:   center;
+  align-content: center;
 
-  padding:         0.3em 1.5em;
+  padding: 0.3em 1.5em;
+  background: map-get($colors, alto);
 
   @include break {
     flex-direction: initial;
@@ -19,10 +21,10 @@
 
 .footer__left,
 .footer__right {
-  flex:    0 0 auto;
+  flex: 0 0 auto;
 
   display: flex;
-  margin:  auto;
+  margin: auto;
 
   @include break {
     margin: 0;
@@ -33,7 +35,7 @@
   display: none;
 
   @include break {
-    flex:    0 0 auto;
+    flex: 0 0 auto;
 
     display: block;
 
@@ -44,13 +46,13 @@
 }
 
 .footer__link {
-  transition:      color 250ms;
+  transition: color 250ms;
 
-  padding:         1em;
-  font-size:       getFontSize(-2);
+  padding: 1em;
+  font-size: getFontSize(-2);
   text-decoration: none;
-  text-transform:  uppercase;
-  color:           map-get($colors, dusty-grey);
+  text-transform: uppercase;
+  color: map-get($colors, dusty-grey);
 
   &:last-child {
     margin-right: 0;
