--- a/styles/components/_navigation.scss
+++ b/styles/components/_navigation.scss
@@ -1,32 +1,78 @@
 .navigation {
-  //width: map-get($screens, large);
-  background: map-get($colors, mine-shaft);
-  transition: background 250ms;
+  flex: 0 0 auto;
 
-  &__inner {
-    display: flex;
+  transition: background 250ms;
+  background: map-get($colors, mine-shaft);
+}
+
+.navigation__inner {
+  display: flex;
+  align-items: center;
+
+  padding: 0.5em;
+
+  @include break {
     padding: 0.5em 1.5em;
   }
+}
 
-  &__logo {
-    flex: 0 0 auto;
-  }
+.navigation__logo {
+  flex: 0 0 auto;
+}
 
-  &__links {
+.navigation__links {
+  display: none;
+
+  @include break {
     flex: 1 1 auto;
+
+    display: block;
     padding: 0.2em 0 0.3em;
     text-align: right;
   }
+}
 
-  &__link {
-    font-size: getFontSize(-2);
-    margin-left: 2.5em;
-    text-transform: uppercase;
-    color: map-get($colors, alto);
+.navigation__link {
+  font-size: getFontSize(-2);
+  margin-left: 2.5em;
+  text-transform: uppercase;
+  color: map-get($colors, alto);
 
-    &:hover,
-    &--active {
-      color: map-get($colors, white);
+  &:hover,
+  .navigation__link--active {
+    color: map-get($colors, white);
+  }
+}
+
+.navigation__mobilebtn {
+  $wh: 24px;
+  $size: 20px;
+
+  display: block;
+  overflow: hidden;
+  width: $wh;
+  height: $wh;
+  margin: 0 1em 0 0;
+  padding: 0;
+  border: 1px solid #fff;
+  font: $size 'webpack';
+  line-height: $wh;
+  text-align: center;
+  background: transparent;
+  color: white;
+
+  &::before {
+    content: "\e904";
+    display: block;
+    width: $wh;
+    height: $wh;
+
+    .nav-displayed & {
+      content: "\e903";
     }
+  }
+
+  @include break {
+    display: none;
   }
 }
