--- a/styles/components/_page.scss
+++ b/styles/components/_page.scss
@@ -1,7 +1,9 @@
 .page {
+  flex: 1 0 auto;
+
   display: flex;
+
   position: relative;
-  //min-height: calc(100vh - 94px);
 }
 
 .page__content {
@@ -18,12 +20,17 @@
 }
 
 .page__edit {
-  position: absolute;
-  top: 1.5em;
-  right: 1.5em;
-  font-size: getFontSize(-1);
-  text-transform: uppercase;
-  color: map-get($colors, lynch);
+  display: none;
+
+  @include break {
+    position: absolute;
+    display: block;
+    top: 1.5em;
+    right: calc(40px + 1.5em);
+    font-size: getFontSize(-1);
+    text-transform: uppercase;
+    color: map-get($colors, lynch);
+  }
 
   &:hover {
     color: map-get($colors, chatham);
