--- a/styles/components/_page.scss
+++ b/styles/components/_page.scss
@@ -1,23 +1,23 @@
-.page {
-  position:relative;
-  display:flex;
-  min-height:calc(100vh - 94px);
+/*.page {*/
+  /*position:relative;*/
+  /*display:flex;*/
+  /*min-height:calc(100vh - 94px);*/
 
-  .sidebar {
-    flex:0 0 25%;
-    max-width:25%;
-  }
+  /*.sidebar {*/
+    /*flex:0 0 25%;*/
+    /*max-width:25%;*/
+  /*}*/
 
-  &__content {
-    flex:0 0 75%;
-    max-width:75%;
-    background:map-get($colors, white);
-  }
+  /*&__content {*/
+    /*flex:0 0 75%;*/
+    /*max-width:75%;*/
+    /*background:map-get($colors, white);*/
+  /*}*/
 
-  &__edit {
-    text-transform:uppercase;
-    color:map-get($colors, lynch);
+  /*&__edit {*/
+    /*text-transform:uppercase;*/
+    /*color:map-get($colors, lynch);*/
 
-    &:hover { color:map-get($colors, chatham); }
-  }
-}
+    /*&:hover { color:map-get($colors, chatham); }*/
+  /*}*/
+/*}*/
