updating splash banner, wording; fixing code sample

--- a/styles/components/_splash.scss
+++ b/styles/components/_splash.scss
@@ -4,9 +4,7 @@
   &__viz {
     position:relative;
     display:flex;
-    height:100vh;
-    min-height:600px;
-    max-height:900px;
+    height:500px;
   }
 
   &__modules,
