Creating component directories containing the component and all it's assets (stylesheets, images, etc.)

--- a/components/container/container-style.scss
+++ b/components/container/container-style.scss
@@ -1,14 +1,5 @@
-.site {
-  display: flex;
-  flex-direction: column;
-
-  min-height: 100vh;
-  overflow: hidden;
-
-  &.nav-displayed {
-    height: 100vh;
-  }
-}
+@import 'vars';
+@import 'mixins';
 
 .container {
   width: 100%;
