--- a/components/logo/logo-style.scss
+++ b/components/logo/logo-style.scss
@@ -1,3 +1,7 @@
+@import 'vars';
+
+@import url(https://fonts.googleapis.com/css?family=Averia+Sans+Libre:300);
+
 .logo {
   position:relative;
   display:inline-block;
