Cleaning up font directory, adding geomanist and cabin, and breaking fonts into a separate file

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -8,11 +8,8 @@
 @import 'vars';
 @import 'functions';
 
-@import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono);
-@import url(https://fonts.googleapis.com/css?family=Averia+Sans+Libre:300);
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,600,700,400italic);
-
 @import './reset';
+@import './fonts';
 @import './icons';
 
 * {
