--- a/styles/markdown.scss
+++ b/styles/markdown.scss
@@ -6,6 +6,8 @@
 
 .page__content,
 .splash__content {
+  line-height:1.5em;
+
   h1 { font-size: getFontSize(4); }
   h2 { font-size: getFontSize(3); }
   h3 { font-size: getFontSize(2); }
@@ -14,6 +16,7 @@
   h6 { font-size: getFontSize(-1); }
 
   h1, h2, h3, h4, h5, h6 {
+    font-family:'Geomanist', 'Century Gothic', sans-serif;
     font-weight:400;
     margin:1.5em 0 0.5em;
 
