--- a/styles/index.scss
+++ b/styles/index.scss
@@ -21,7 +21,7 @@ html {
 }
 
 body {
-  font: 300 getFontSize(0) 'Open Sans', 'Century Gothic', sans-serif;
+  font: 300 getFontSize(0) 'Cabin', 'Century Gothic', sans-serif;
   color: map-get($colors, emperor);
   background: map-get($colors, concrete);
 }
