--- a/components/page/page-style.scss
+++ b/components/page/page-style.scss
@@ -31,10 +31,10 @@
     right: calc(40px + 1.5em);
     font-size: getFontSize(-1);
     text-transform: uppercase;
-    color: map-get($colors, lynch);
+    color: map-get($colors, denim);
   }
 
   &:hover {
-    color: map-get($colors, chatham);
+    color: map-get($colors, malibu);
   }
 }
