--- a/styles/partials/_vars.scss
+++ b/styles/partials/_vars.scss
@@ -1,9 +1,6 @@
 $colors: (
-  regent: #8a929d,
-  lynch: #617693,
-  chambray: #31517e,
-  chatham: #12396e,
-  parchment: #efe3d0,
+  malibu: #8DD6F9,
+  denim: #1D78C1,
   calico: #dfc08b,
   tussock: #c0903f,
   white: #ffffff,
