Adding react-headroom and updating the navigation component (@bebraw not sure if rh will play nicely with preact)

--- a/components/navigation/navigation-style.scss
+++ b/components/navigation/navigation-style.scss
@@ -2,9 +2,8 @@
 @import 'mixins';
 @import 'functions';
 
-.navigation {
+.headroom {
   flex: 0 0 auto;
-
   transition: background 250ms;
   background: map-get($colors, mine-shaft);
 }
