Simplifying the contributors section

--- a/components/contributors/contributors-style.scss
+++ b/components/contributors/contributors-style.scss
@@ -1,19 +1,9 @@
 .contributor {
   display: inline-block;
+  margin-top:1em;
   margin-right: 1em;
 
-  &:last-of-type {
-    margin-right: 0;
-  }
-
   img {
-    height: 80px;
-    border-radius: 3px;
-  }
-
-  span {
-    display: block;
-    text-align: center;
-    font-size: 0.8em;
+    height: 50px;
   }
 }
