--- a/components/page/page-style.scss
+++ b/components/page/page-style.scss
@@ -3,11 +3,14 @@
 @import 'functions';
 
 .page {
-  flex: 1 0 auto;
-
-  display: flex;
-
   position: relative;
+  flex: 1 0 auto;
+  display: flex;
+}
+
+// XXX: Temporary hack to fix sidebar width
+.page div:first-of-type {
+  flex:1;
 }
 
 .page__content {
@@ -27,8 +30,8 @@
   @include break {
     position: absolute;
     display: block;
-    top: 1.5em;
-    right: calc(40px + 1.5em);
+    top: 1.4em;
+    right: 1.75em;
     font-size: getFontSize(-1);
     text-transform: uppercase;
     color: map-get($colors, denim);
