--- a/components/sidebar/sidebar-style.scss
+++ b/components/sidebar/sidebar-style.scss
@@ -5,15 +5,6 @@
 .sidebar {
   position: relative;
   flex: 1;
-
-// Disabled as interactive generates a div parent (need to attach the code somewhere)
-// This needs a better fix (no way to eliminate the div)
-/*
-  @include break {
-    max-width: 25%;
-    background: transparentize(map-get($colors, white), 0.5);
-  }
-*/
 }
 
 .sidebar__inner {
@@ -29,13 +20,14 @@
   overflow-x: hidden;
   padding: 1.5em;
   background: map-get($colors, emperor);
-  color: map-get($colors, dusty-grey);
+  color: map-get($colors, alto);
   z-index: 1;
 
   @include break {
     position: static;
     transform: none;
     width: 100%;
+    max-height:none;
     background: transparent;
     color: map-get($colors, emperor);
   }
@@ -51,11 +43,10 @@
 
 .sidebar-item {
   font-size: getFontSize(-1);
-  margin-bottom: 0.5em;
+  margin-bottom: 0.75em;
 
   &__title {
     font-weight: 400;
-    text-transform: uppercase;
     text-decoration: none;
     color: inherit;
 
@@ -80,11 +71,11 @@
     display:none;
     list-style: none;
     padding: 0;
-    margin: 0.25em 0 1em;
+    margin: 0.5em 0 1em;
   }
 
   &__anchor {
-    margin: 0;
+    margin:0.25em 0;
 
     a {
       display: inline-block;
@@ -109,6 +100,11 @@
   &--open {
     .sidebar-item__anchors {
       display:block;
+    }
+
+    .sidebar-item__toggle {
+      margin-left:-2px;
+      transform:rotate(180deg) translateX(1px);
     }
   }
 }
