--- a/components/footer/footer-style.scss
+++ b/components/footer/footer-style.scss
@@ -13,8 +13,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-content: center;
-  padding-top: 0.3em;
-  padding-bottom: 0.3em;
+  padding: 0.4em 0;
 
   @include break {
     flex-direction: initial;
@@ -26,6 +25,7 @@
   flex: 0 0 auto;
   display: flex;
   margin: auto;
+  align-items: center;
 
   @include break {
     margin: 0;
@@ -50,20 +50,20 @@
   @include break {
     flex: 0 0 auto;
     display: block;
-
-    .cube {
-      margin-top: 5px;
-    }
   }
 }
 
+.footer__icon {
+  display:block;
+  height:35px;
+
+  img { height:100%; width:auto; }
+}
+
 .footer__link {
-  padding: 1em 0;
   font-size: getFontSize(-2);
-  text-decoration: none;
   text-transform: uppercase;
   color: map-get($colors, dusty-grey);
-  transition: color 250ms;
 
   &:not(:last-child) {
     margin-right: 1.5em;
