--- a/components/navigation/navigation-style.scss
+++ b/components/navigation/navigation-style.scss
@@ -11,11 +11,27 @@
 .navigation__inner {
   display: flex;
   align-items: center;
-
-  padding: 0.5em;
+  padding: 0.5em 1em;
 
   @include break {
     padding: 0.5em 1.5em;
+  }
+}
+
+.navigation__mobile {
+  position: absolute;
+  font-size: getFontSize(2);
+  display: flex;
+  left: -0.5em;
+  color: map-get($colors, white);
+  transition: color 250ms;
+
+  &:active {
+    color: map-get($colors, alto);
+  }
+
+  @include break {
+    display: none;
   }
 }
 
@@ -41,44 +57,10 @@
   font-size: getFontSize(-2);
   margin-left: 2.5em;
   text-transform: uppercase;
-  color: map-get($colors, alto);
+  color: map-get($colors, dusty-grey);
 
   &:hover,
-  .navigation__link--active {
+  &--active {
     color: map-get($colors, white);
-  }
-}
-
-.navigation__mobilebtn {
-  $wh: 24px;
-  $size: 20px;
-
-  display: block;
-  box-sizing: content-box;
-  overflow: hidden;
-  width: $wh;
-  height: $wh;
-  margin: 0 1em 0 0;
-  padding: 0;
-  border: 1px solid #fff;
-  font: $size 'webpack';
-  line-height: $wh;
-  text-align: center;
-  background: transparent;
-  color: white;
-
-  &::before {
-    content: "\e904";
-    display: block;
-    width: $wh;
-    height: $wh;
-
-    .nav-displayed & {
-      content: "\e903";
-    }
-  }
-
-  @include break {
-    display: none;
   }
 }
