Quick fix for the mobile sidebar anchor links

--- a/components/sidebar/sidebar-style.scss
+++ b/components/sidebar/sidebar-style.scss
@@ -12,7 +12,7 @@
 
     .sidebar-item__title,
     .sidebar-item__toggle { color: map-get($colors, white) !important; }
-    .sidebar-item__anchor a { color: map-get($colors, alto); }
+    .sidebar-item__anchor a { color: map-get($colors, alto) !important; }
   }
 }
 
