Tweaking the footer styling for mobile

--- a/components/footer/footer-style.scss
+++ b/components/footer/footer-style.scss
@@ -26,9 +26,11 @@
   display: flex;
   margin: auto;
   align-items: center;
+  padding: 0.25em 0;
 
   @include break {
     margin: 0;
+    padding: 0;
   }
 }
 
