--- a/components/page/page-style.scss
+++ b/components/page/page-style.scss
@@ -11,10 +11,11 @@
 // XXX: Temporary hack to fix sidebar width
 .page div:first-of-type {
   flex:0 0 auto;
-  overflow:hidden;
+  overflow:auto;
 
   @include break {
     flex:0 0 25%;
+    overflow:hidden;
   }
 }
 
