--- a/template.ejs
+++ b/template.ejs
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title><%= webpackConfig.template.title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="/assets/favicon.ico">
 
     <% for (var file in webpackConfig.template.cssFiles) { %>
-    <link href="<%= webpackConfig.template.cssFiles[file] %>" rel="stylesheet">
+      <link href="<%= webpackConfig.template.cssFiles[file] %>" rel="stylesheet">
     <% } %>
   </head>
   <body>
