--- a/components/logo/logo-style.scss
+++ b/components/logo/logo-style.scss
@@ -1,36 +1,37 @@
 @import 'vars';
 
 .logo {
-  position:relative;
-  display:inline-block;
+  display:flex;
+  float:left;
+  align-items:middle;
+
+  &__icon {
+    width:auto;
+    height:35px;
+    opacity:0.9;
+    transition:opacity 250ms;
+  }
 
   &__text {
-    font-size:1.3em;
     font-family:'Geomanist', 'Century Gothic', sans-serif;
+    font-size:1.3em;
     font-weight:500;
     letter-spacing:1px;
-    margin-left:1.75em;
-    line-height:1.4;
+    margin-left:0.25em;
+    margin-top:3px;
+    color:map-get($colors, emperor);
     transition:color 250ms;
   }
 
-  &__cube {
-    position:absolute;
-  }
-
-  &--dark {
-    .logo__text { 
-      color:map-get($colors, dove-grey); 
-    }
-
-    &:hover .logo__text {
-      color:map-get($colors, mine-shaft);
-    }
+  &:hover {
+    .logo__icon { opacity:1; }
+    .logo__text { color:map-get($colors, mine-shaft); }
   }
 
   &--light {
     .logo__text { 
-      color:map-get($colors, alto); 
+      color:map-get($colors, concrete);
+      //color:rgb(246, 250, 251); 
     }
 
     &:hover .logo__text {
