Fix gitter button
Now it opens the sidecar as it should.

--- a/template.ejs
+++ b/template.ejs
@@ -16,5 +16,11 @@
     <% for (var script of webpackConfig.template.jsFiles) { %>
       <script src="<%= script %>" type="text/javascript"></script>
     <% } %>
+    <script>
+      ((window.gitter = {}).chat = {}).options = {
+        room: 'webpack/webpack'
+      };
+    </script>
+    <script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
   </body>
 </html>
