Hide gitter "Open chat" button
Related to #66.

--- a/template.ejs
+++ b/template.ejs
@@ -18,7 +18,8 @@
     <% } %>
     <script>
       ((window.gitter = {}).chat = {}).options = {
-        room: 'webpack/webpack'
+        room: 'webpack/webpack',
+        activationElement: false
       };
     </script>
     <script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
