Tweaking the Navigation's mobile nav trigger's styling

--- a/components/navigation/navigation-style.scss
+++ b/components/navigation/navigation-style.scss
@@ -38,10 +38,11 @@
 }
 
 .navigation__mobile {
-  font-size: 1.2em;
+  font-size: 1.4em;
   display: flex;
   margin-right:0.25em;
   color: map-get($colors, white);
+  cursor: pointer;
   transition: color 250ms;
 
   &:active {
