Forcing the transparent Navigation to sit on top of other content

--- a/components/navigation/navigation-style.scss
+++ b/components/navigation/navigation-style.scss
@@ -12,6 +12,7 @@
     display:flex;
     justify-content: center;
     background: transparent;
+    z-index:5;
 
     .navigation__inner {
       position:absolute;
