--- a/components/splash-viz/splash-viz-style.scss
+++ b/components/splash-viz/splash-viz-style.scss
@@ -6,6 +6,13 @@
   display:flex;
   height:100vh;
   min-height:480px;
+  max-height:720px;
+  background:linear-gradient(
+    to bottom right, 
+    map-get($colors, white) 0%, 
+    map-get($colors, white) 25%,
+    map-get($colors, alto) 100%
+  );
 
   &__modules,
   &__output { 
