--- a/components/splash/splash-style.scss
+++ b/components/splash/splash-style.scss
@@ -2,20 +2,20 @@
 @import 'functions';
 
 .splash {
-  &__sponsorheadline {
-    //font-style:italic;
-  }
-
-  &__sponsor { 
-    padding-top: 1.5em;
-    text-align: center;
+  &__bin {
+    width:100%;
+    height:720px;
   }
 
   &__section {
-    background:map-get($colors, concrete);
+    
   }
 
   &__content { 
     padding:1.5em; 
+  }
+
+  &__sponsor { 
+    text-align: center;
   }
 }
