Tweaking the headline in the SplashViz component

--- a/components/splash-viz/splash-viz-style.scss
+++ b/components/splash-viz/splash-viz-style.scss
@@ -49,7 +49,6 @@
     left:0;
     text-align:center;
     font-size:getFontSize(2);
-    font-style:italic;
-    color:map-get($colors, dove-grey);
+    font-family:'Geomanist', 'Century Gothic', sans-serif;
   }
 }
