--- a/styles/markdown.scss
+++ b/styles/markdown.scss
@@ -5,7 +5,7 @@
 @import '~prismjs/themes/prism-funky';
 
 .page__content,
-.splash__content {
+.splash__section {
   line-height:1.5em;
 
   h1 { font-size: getFontSize(4); }
